fix: banner test is not centered on large screens

--- a/app.css
+++ b/app.css
@@ -596,6 +596,7 @@
 @media screen and (min-width: 900px) {
   .ins-tiles--900 .ins-tile--cover .ins-tile__wrap {
     margin: 0;
+    max-width: unset;
     padding: 0;
   }
 }
